--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,3 +6,12 @@ mat-sidenav {
 mat-sidenav-content {
   background-color: white;
 }
+
+.task-title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+}
+
+.grey-color {
+  background-color: #fafafa;
+}
