--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <div class="row p-4">
-  <img class="img-fluid my-3" src="../../../assets/images/todo-icon.png" />
+  <mat-icon class="my-3 mx-5 mb-5" aria-hidden="false" aria-label="ToDoList">done_all</mat-icon>
   <nav class="nav flex-column nav-pills nav-fill">
     <a class="nav-link active-nav-item" aria-current="page" href="#">Active</a>
     <a class="nav-link" href="#">Link</a>
