--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -1,3 +1,8 @@
 .active-nav-item {
-  border-bottom: 3px solid #0d6efd;
+  border-bottom: 3px solid #3f51b5;
 }
+
+.mat-icon {
+  font-size: 50px;
+}
+
