--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 pt-3">
     <div class="card">
       <div class="card-body">
         <mat-checkbox class="mt-1"> This is some text within a card body.</mat-checkbox>
