--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -6,3 +6,8 @@
     <a class="nav-link" href="#">Link</a>
   </nav>
 </div>
+<div class="button-container">
+  <button mat-fab color="accent" (click)="openDialog()">
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
