--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -6,3 +6,17 @@
   font-size: 50px;
 }
 
+.button-container {
+  display: flex;
+  justify-content: center;
+
+  button {
+    margin-top: 20px;
+    margin-right: 20px;
+  }
+
+  .mat-icon {
+    font-size: 24px;
+  }
+}
+
